cluster/apps/eve-dev/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/affinity: cookie
    hajimari.io/enable: "true"
    hajimari.io/group: eve-dev
    hajimari.io/icon: rocket-launch
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.rwcloud.org?rm=$request_method
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
  name: eve-dev-rabbitmq
spec:
  ingressClassName: nginx
  rules:
  - host: eve-dev-rabbitmq.rwcloud.org
    http:
      paths:
      - backend:
          service:
            name: eve-dev-rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - eve-dev-rabbitmq.rwcloud.org
    secretName: eve-dev-rabbitmq
